Fix button bug in section 4, no wrap to wrap

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     background-color:#3882F6;
     min-height: 200px;
     margin: 100px;
